--- a/svab_nxt/res/layout/game_drill_printer.xml
+++ b/svab_nxt/res/layout/game_drill_printer.xml
@@ -71,17 +71,17 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.50"
                     android:drawableTop="@android:drawable/ic_menu_gallery"
-                    android:text="load img" 
-                    android:visibility="visible"/>
-                
+                    android:text="load img"
+                    android:visibility="visible" />
+
                 <Button
                     android:id="@+id/btnReset"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
-                    android:text="reset" 
-                    android:visibility="gone"/>
+                    android:text="reset"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <LinearLayout
@@ -225,49 +225,62 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
+    <ScrollView
         android:id="@+id/help_ll"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/linearLayout1"
-        android:orientation="vertical" >
+        android:layout_toLeftOf="@+id/linearLayout1" >
 
-        <Button
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/my_black_white_selector"
-            android:onClick="penHeadDownMin"
-            android:padding="5dp"
-            android:text="down-min" />
+            android:orientation="vertical" >
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/my_black_white_selector"
-            android:onClick="penHeadUpMin"
-            android:padding="5dp"
-            android:text="up-min" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="penHeadDownMin"
+                android:padding="5dp"
+                android:text="down-min" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/my_black_white_selector"
-            android:onClick="penHeadDownMax"
-            android:padding="5dp"
-            android:text="down-max" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="penHeadUpMin"
+                android:padding="5dp"
+                android:text="up-min" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/my_black_white_selector"
-            android:onClick="penHeadUpMax"
-            android:padding="5dp"
-            android:text="up-max" />
-    </LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="penHeadDownMax"
+                android:padding="5dp"
+                android:text="down-max" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="penHeadUpMax"
+                android:padding="5dp"
+                android:text="up-max" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="testConnection"
+                android:padding="5dp"
+                android:text="test connect" />
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/help_ll_detail"
