--- a/svab_nxt/res/layout/game_pen_printer.xml
+++ b/svab_nxt/res/layout/game_pen_printer.xml
@@ -22,12 +22,28 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/btnCapture"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@android:drawable/ic_menu_camera"
-                android:text="caputre" />
+                android:layout_weight="1"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/pen_settings"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:drawableLeft="@android:drawable/ic_menu_preferences"
+                    android:text="settings" />
+
+                <Button
+                    android:id="@+id/btnCapture"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:drawableLeft="@android:drawable/ic_menu_camera"
+                    android:text="caputre" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ll_crop_name"
@@ -133,12 +149,12 @@
             </LinearLayout>
 
             <Button
-                    android:id="@+id/btnInvert"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"                    
-                    android:text=" \\ Invert \\ "
-                    android:visibility="visible" />
-            
+                android:id="@+id/btnInvert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" \\ Invert \\ "
+                android:visibility="visible" />
+
             <SeekBar
                 android:id="@+id/bw_threshold"
                 android:layout_width="match_parent"
@@ -217,14 +233,6 @@
             android:onClick="penHeadUp"
             android:padding="10dp"
             android:text="@string/print_test_pen_head_up" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/my_black_white_selector"
-            android:onClick="hide"
-            android:padding="10dp"
-            android:text="@string/pen_printer_hide" />
     </LinearLayout>
 
 </RelativeLayout>
